# oxenClaw

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  desktop-build.yml  release.yml
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  notify.rs  token.rs  wsl.rs
desktop/web/: index.html
docs/: ACP.md  AGENTS.md  ARCHITECTURE.md  AUTHORING_SKILLS.md  BROWSER.md  CANVAS.md  CODING_AGENT.md  CONFIG_EXAMPLE.yaml  DESKTOP_APP.md  HANDOFF.md  HERMES_PORTS.md  INSTALL_WSL.md  LLAMACPP_DIRECT.md  MCP_YAHOO_FINANCE.md  MEMORY_COMPARISON.md  OLLAMA.md  OPERATIONS.md  PLUGIN_SDK_SKILL_SOURCE.md  PORTING_PLAN.md  RELEASING.md  ROADMAP.md  SECURITY.md  SLACK.md  SUBAGENTS_AUDIT.md  SUBSYSTEM_MAP.md  WINDOWS_DESKTOP.md
oxenclaw/: __init__.py
oxenclaw/acp/: __init__.py  fake_runtime.py  framing.py  manager.py  pi_agent_runtime.py  protocol.py  runtime_registry.py  server.py  subprocess_runtime.py
oxenclaw/agents/: __init__.py  acp_parent_stream.py  acp_runtime.py  acp_subprocess.py  base.py  builtin_tools.py  coding_agent.py  cron_suggest.py  dispatch.py  echo.py  factory.py  history.py  incomplete_turn.py  lanes.py  local_agent.py  message_merge.py  pending_action.py  pi_agent.py  plan_execute.py  pseudo_tool.py  registry.py  skill_suggest.py  tool_policy.py  tools.py
oxenclaw/approvals/: __init__.py  manager.py  tool_wrap.py  whitelist.py
oxenclaw/backup/: __init__.py  archive.py
oxenclaw/browser/: __init__.py  egress.py  errors.py  pinning.py  policy.py  session.py
oxenclaw/canvas/: __init__.py  events.py  store.py
oxenclaw/channels/: __init__.py  router.py  runner.py
oxenclaw/clawhub/: __init__.py  activation.py  bin_installer.py  client.py  compat.py  desc_enricher.py  frontmatter.py  installer.py  loader.py  lockfile.py  parallel_search.py  preprocessing.py  registries.py  runtime.py  skill_commands.py
oxenclaw/cli/: __init__.py  __main__.py  acp_cmd.py  backup_cmd.py  config_cmd.py  flows_cmd.py  gateway_cmd.py  memory_cmd.py  message_cmd.py  sessions_cmd.py  skills_cmd.py  wiki_cmd.py
oxenclaw/config/: __init__.py  auth_token.py  credentials.py  env_loader.py  env_subst.py  loader.py  paths.py  preflight.py
oxenclaw/cron/: __init__.py  models.py  run_log.py  scheduler.py  store.py  trigger.py
oxenclaw/data/: models_dev_snapshot.json
oxenclaw/flows/: __init__.py  doctor.py  full_setup.py  llamacpp_setup.py  model_picker.py  provider_config.py  provider_flow.py  system_deps.py  types.py
oxenclaw/gateway/: __init__.py  agents_methods.py  approval_methods.py  bind_policy.py  canvas_methods.py  channels_methods.py  chat_methods.py  config_methods.py  cron_methods.py  isolation_methods.py  mcp_methods.py  memory_methods.py  plan_methods.py  protocol.py  restart.py  router.py  server.py  sessions_methods.py  skills_methods.py  usage_methods.py  wiki_methods.py
oxenclaw/memory/: __init__.py  active.py  auto_extract.py  dreaming.py  embedding_cache.py  embeddings.py  hashing.py  hybrid.py  inbox.py  indexer.py  mmr.py  models.py  privacy.py  provider.py  reader.py  retriever.py  store.py  temporal_decay.py  tools.py  turn_dream.py  walker.py
oxenclaw/multimodal/: __init__.py  capabilities.py  formats.py  inbound.py
oxenclaw/observability/: __init__.py  llm_trace.py  logging.py  metrics.py  readiness.py
oxenclaw/pi/: __init__.py  account_usage.py  auth.py  auth_pool.py  cache_observability.py  catalog.py  compaction.py  extras.py  hooks.py  lifecycle.py  messages.py  models.py  models_dev.py  persistence.py  policy.py  rate_limit_tracker.py  registry.py  session.py  session_memory_hook.py  store_ops.py  streaming.py  system_prompt.py  tokens.py  tool_result_storage.py  tool_runtime.py  tools.py
oxenclaw/plugin_sdk/: __init__.py  channel_contract.py  config_runtime.py  config_schema.py  media_runtime.py  reply_runtime.py  runtime_env.py  skill_source_contract.py
oxenclaw/plugins/: __init__.py  discovery.py  manifest.py  registry.py
oxenclaw/security/: __init__.py  checkpoint.py  command_gate.py  isolated_function.py  sandbox_context.py  shell_tool.py  skill_scanner.py  tool_runner.py
oxenclaw/static/: __init__.py  app.css  app.html  app.js
oxenclaw/tools_pkg/: __init__.py  _arg_aliases.py  _desc.py  acp_delegate_tool.py  acp_tool.py  browser.py  bundle.py  canvas.py  coding.py  cron_tool.py  file_state.py  fs_tools.py  fuzzy_match.py  github.py  healthcheck.py  message_tool.py  process_tool.py  session_logs.py  session_tools.py  skill_creator.py  skill_resolver_tool.py  skill_run.py  subagent.py  summarize.py  update_plan_tool.py  weather.py  web.py  wiki_tools.py  yield_tool.py
oxenclaw/wiki/: __init__.py  claims.py  compile.py  ingest.py  lint.py  markdown.py  models.py  palace.py  query.py  store.py  vault.py
sampyclaw/: __init__.py
sampyclaw/agents/: __init__.py  anthropic_agent.py  base.py  builtin_tools.py  dispatch.py  (+6 more)
scripts/: build-windows-exe.sh  bump_version.py  generate_icons.py  smoke_local_agent.py  smoke_memory.py  soak.py
tests/: _iso_test_handler.py  _memory_stubs.py  conftest.py  test_account_usage.py  test_acp_delegate_tool.py  test_acp_framing.py  test_acp_manager.py  test_acp_memory_disambiguation.py  test_acp_memory_driven_toolcalls.py  test_acp_parent_stream.py  test_acp_pi_agent_runtime.py  test_acp_runtime_protocol.py  test_acp_server.py  test_acp_server_pi_backend_wiring.py  test_acp_spawn.py  test_acp_subprocess_runtime.py  test_acp_two_turn_memory_disambig.py  test_active_memory.py  test_agent_history.py  test_agent_tools.py  test_agents.py  test_agents_factory.py  test_anthropic_agent.py  test_approvals_manager.py  test_approvals_shell_whitelist.py  test_approvals_tool_wrap.py  test_arg_loop_detector.py  test_auth_pool.py  test_auth_token.py  test_auto_extract.py  test_backup.py  test_bind_policy.py  test_browser_egress.py  test_browser_pinning.py  test_browser_policy.py  test_browser_tools.py  test_bundled_skills.py  test_canvas_events.py  test_canvas_methods.py  test_canvas_store.py  (+185 more)
(+318 files in other folders)
