[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sampyclaw"
version = "0.0.0"
description = "Python port of openclaw — personal multi-channel AI assistant gateway"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "aiohttp>=3.10",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "tenacity>=9.0",
    "typer>=0.15",
    "uvicorn>=0.32",
    "websockets>=13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "pyright>=1.1",
    # Headless browser tests under `tests/dashboard/`. The whole suite
    # auto-skips when Chromium / its system libs are missing — install
    # once with: `playwright install chromium && sudo playwright install-deps chromium`
    "playwright>=1.50",
]
browser = [
    "playwright>=1.50",
]

[project.scripts]
sampyclaw = "sampyclaw.cli.__main__:app"

[project.entry-points."sampyclaw.plugins"]
telegram = "sampyclaw.extensions.telegram.plugin_entry:TELEGRAM_PLUGIN"

[tool.hatch.build.targets.wheel]
packages = ["sampyclaw"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["sampyclaw", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live external service (Ollama, Telegram, etc.)",
]
