[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sampyclaw"
version = "0.1.0-rc.1"
description = "Python port of openclaw — personal multi-channel AI assistant gateway"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "sampyClaw contributors" }]
keywords = [
    "ai", "agent", "assistant", "telegram", "slack",
    "anthropic", "claude", "ollama", "vllm", "llm",
    "mcp", "gateway", "websocket",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "aiogram>=3.13",
    "aiohttp>=3.10",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "fastapi>=0.115",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "tenacity>=9.0",
    "typer>=0.15",
    "uvicorn>=0.32",
    "websockets>=13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.7",
    "pyright>=1.1",
    # Headless browser tests under `tests/dashboard/`. The whole suite
    # auto-skips when Chromium / its system libs are missing — install
    # once with: `playwright install chromium && sudo playwright install-deps chromium`
    "playwright>=1.50",
]
browser = [
    "playwright>=1.50",
]

[project.urls]
Homepage      = "https://github.com/andreason21/sampyClaw"
Documentation = "https://github.com/andreason21/sampyClaw/tree/main/docs"
Repository    = "https://github.com/andreason21/sampyClaw"
Issues        = "https://github.com/andreason21/sampyClaw/issues"
Changelog     = "https://github.com/andreason21/sampyClaw/releases"

[project.scripts]
sampyclaw = "sampyclaw.cli.__main__:app"

[project.entry-points."sampyclaw.plugins"]
telegram = "sampyclaw.extensions.telegram.plugin_entry:TELEGRAM_PLUGIN"
slack    = "sampyclaw.extensions.slack.plugin_entry:SLACK_PLUGIN"

[tool.hatch.build.targets.wheel]
packages = ["sampyclaw"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["sampyclaw", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a live external service (Ollama, Telegram, etc.)",
]
