[package]
# version is kept in sync with pyproject.toml via scripts/bump_version.py.
# The release workflow refuses to ship if the three files disagree.
name = "sampyclaw-desktop"
version = "0.1.0-rc.6"
description = "sampyClaw native desktop app"
authors = ["sampyClaw"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
# Auto-updater: signed MSI / AppImage delta delivery from the GitHub Release.
# The release workflow signs each bundle with $TAURI_SIGNING_PRIVATE_KEY;
# the desktop app verifies with the public key embedded in tauri.conf.json
# before applying. See docs/RELEASING.md.
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
keyring = "3"                      # Windows Credential Manager
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[features]
# `custom-protocol` is the Tauri-required feature for production builds.
custom-protocol = ["tauri/custom-protocol"]
