[package]
# version is kept in sync with pyproject.toml via scripts/bump_version.py.
# The release workflow refuses to ship if the three files disagree.
name = "oxenclaw-desktop"
version = "0.1.0-rc.22"
description = "oxenClaw native desktop app"
authors = ["oxenClaw"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
# Auto-updater intentionally NOT registered: it requires a real Tauri
# signing keypair (`cargo tauri signer generate`) plus
# `TAURI_SIGNING_PRIVATE_KEY` wired into CI. Until that's set up, a
# placeholder pubkey crashes the app at startup because the plugin's
# init parses the pubkey eagerly. Re-add `tauri-plugin-updater = "2"`
# here, restore the `updater` block in tauri.conf.json with the real
# pubkey, and re-register in main.rs when signing is ready (see
# docs/RELEASING.md).
tauri-plugin-process = "2"
# Single-instance: spawning the .exe a second time brings the existing
# window to front instead of starting a zombie process. Important for the
# Windows tray-app pattern where users launch from Start menu repeatedly.
tauri-plugin-single-instance = "2"
# keyring = "3" was removed — set_password silently no-ops in the
# cargo-xwin cross-build (returns Ok, never persists). Token storage
# now lives in a JSON file under %LOCALAPPDATA%\oxenclaw-desktop\
# (NTFS ACLs already restrict reads to the same user). See token.rs.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
url = "2"

[dev-dependencies]
tempfile = "3"

[features]
# `custom-protocol` is the Tauri-required feature for production builds.
custom-protocol = ["tauri/custom-protocol"]
